# leo_erc_robot

leo_erc_bringup/: CMakeLists.txt  package.xml
leo_erc_bringup/config/: core2.yaml  firmware.yaml  zed2.yaml
leo_erc_bringup/launch/: jetson_bringup.launch  leo_bringup.launch
leo_erc_bringup/scripts/: zed_odom
leo_erc_fw/: CMakeLists.txt  package.xml
leo_erc_fw/scripts/: update
leo_erc_pdu/: CMakeLists.txt  package.xml
leo_erc_pdu/config/: pdu.yaml  pdu_dynamixel.csv
leo_erc_pdu/launch/: pdu.launch
leo_erc_pdu/scripts/: pdu_driver  pdu_driver.py
