<?xml version="1.0"?>
<package format="3">
  <name>leo_erc_fw</name>
  <version>0.0.0</version>
  <description>
    Firmware binary releases and update script for Leo Rover (ERC edition)
  </description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  <author email="blazej@fictionlab.pl">Błażej Sowa</author>

  <license>MIT</license>

  <url type="bugtracker">https://github.com/LeoRover/leo_erc_robot/issues</url>
  <url type="repository">https://github.com/LeoRover/leo_erc_robot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
  
  <exec_depend>leo_fw</exec_depend>
  
</package>