<?xml version="1.0"?>
<package format="2">
  <name>leo_erc_pdu</name>
  <version>0.0.0</version>
  <description>
    Probe deployment unit driver. 
  </description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  <author email="piotr@fictionlab.pl">Piotr Szlachcic</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>dynamixel_sdk</exec_depend>
  <exec_depend>dynamixel_workbench</exec_depend>
  <exec_depend>dynamixel_workbench_msgs</exec_depend>
  
</package>
